infra/k8s/base/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: prometheus-praxis
  labels:
    app: alertmanager-core
spec:
  type: ClusterIP
  selector:
    app: alertmanager-core
  ports:
    - name: http
      port: 9093
      targetPort: 9093
