infra/k8s/base/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus-praxis
  labels:
    app: prometheus-core
spec:
  type: ClusterIP
  selector:
    app: prometheus-core
  ports:
    - name: http
      port: 9090
      targetPort: 9090
